Fixed layout issue with kanban area scrolling

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
 @layer components {
   .sidebar__icon {
     @apply rounded-full transition-all duration-200 cursor-pointer object-contain ml-[1px];
